<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="always"
        android:title="@string/lbl_action_refresh"/>
    <item
        android:id="@+id/action_new_message"
        android:icon="@drawable/ic_compose_message"
        android:showAsAction="always"
        android:title="@string/lbl_action_new_message"/>    
    <item
        android:id="@+id/action_debug_settings"
        android:icon="@drawable/btn_favorite"
        android:showAsAction="always"
        android:title="@string/action_debug_settings"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:showAsAction="always"
        android:title="@string/lbl_action_logout"/>

</menu>