<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMessage" >

    <EditText
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hint_to"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contacts"
        android:layout_alignRight="@+id/contacts"
        android:layout_below="@+id/contacts"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/hint_subject" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/subject"
        android:layout_below="@+id/subject"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/hint_message"
        android:inputType="textMultiLine"
        android:lines="5"/>

    <TextView
        android:id="@+id/lblAttachments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/message"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_attachments"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/attachmentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignLeft="@+id/lblAttachments"
        android:layout_below="@+id/lblAttachments" 
        android:divider="@null"
        android:isScrollContainer="false">
    </ListView>
    
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/attachmentList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="sendMessage"
        android:text="@string/btn_send" >

    </Button>

    <CheckBox
        android:id="@+id/broadcastCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblAttachments"
        android:layout_alignBottom="@+id/lblAttachments"
        android:layout_alignRight="@+id/attachmentList"
        android:text="@string/lbl_broadcast" />

    </RelativeLayout>
